# pyduck-janitor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HARD_FUNCTIONS_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  STATUS.md  STATUS_FINAL.md
examples/: basic_cleaning.py  comparison.py  large_dataset.py  sql_interop.py
pyduck_janitor/: __init__.py  cleaning_ops.py  cleaning_ops_extended.py  cleaning_ops_final.py  duck_janitor.py
tests/: __init__.py  test_cleaning_ops.py  test_duck_janitor.py
