[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyduck-janitor"
version = "0.1.0"
description = "DuckDB-backed pyjanitor for high-performance data cleaning on large datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["duckdb", "janitor", "data cleaning", "pandas", "data preprocessing", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "duckdb>=0.9.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyduck-janitor"
Documentation = "https://pyduck-janitor.readthedocs.io"
Repository = "https://github.com/yourusername/pyduck-janitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyduck_janitor*"]
